ci: 添加自动化测试配置

--- a/.gitee/go.yml
+++ b/.gitee/go.yml
@@ -1,13 +1,25 @@
-name: CI
+name: TapTap CI
 on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: npm ci
-      - run: npm run test 
+      - run: npm run test:unit
+      - run: npm run test:e2e
+      - uses: actions/upload-artifacts@v3
+        if: failure()
+        with:
+          name: test-results
+          path: |
+            tests/unit/**/__snapshots__
+            tests/e2e/**/__snapshots__
