优化统计页面和存储功能

--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -12,10 +12,19 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "useCompilerPlugins": false,
+    "useCompilerPlugins": true,
     "minifyWXML": true,
+    "minifyWXSS": true,
+    "minifyJS": true,
     "coverView": true,
-    "lazyCodeLoading": "requiredComponents"
+    "lazyCodeLoading": "requiredComponents",
+    "useStaticServer": true,
+    "checkSiteMap": false,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    }
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
