移除未使用的存储页面配置

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,8 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/stat/stat",
-    "pages/export/export",
-    "pages/storage/storage"
+    "pages/export/export"
   ],
   "window": {
     "backgroundTextStyle": "light",
