--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "上下班打卡工具",
+    "navigationBarTitleText": "秒打打卡工具",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": false
   },
