--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tap-tap",
   "version": "1.0.0",
-  "description": "上下班打卡工具小程序",
+  "description": "秒打打卡工具小程序",
   "main": "miniprogram/app.js",
   "scripts": {
     "test": "vitest run",
