--- a/.gitee/go.yml
+++ b/.gitee/go.yml
@@ -2,32 +2,31 @@ name: Deploy to Cloudflare Pages
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+display-name: "部署到Cloudflare Pages"
+
+steps:
+- name: 检出代码
+  uses: git-checkout
+  
+- name: 安装Node.js
+  uses: node-setup
+  with:
+    version: '18'
     
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        
-    - name: Install Wrangler CLI
-      run: npm install -g wrangler
-      
-    - name: Deploy to Cloudflare Pages
-      env:
-        CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      run: |
-        echo "🚀 Starting deployment to Cloudflare Pages..."
-        echo "Project: hours-guard"
-        echo "Commit: ${{ github.sha }}"
-        wrangler pages deploy public --project-name=hours-guard --commit-message="Auto-deploy from Gitee: $(date +%Y-%m-%d_%H:%M:%S)"
+- name: 安装Wrangler CLI
+  run: |
+    npm install -g wrangler
+    
+- name: 部署到Cloudflare Pages
+  env:
+    CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+    CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+  run: |
+    echo "🚀 开始部署到Cloudflare Pages..."
+    echo "项目: hours-guard"
+    echo "提交: ${{ GITEE_COMMIT_SHA }}"
+    wrangler pages deploy public --project-name=hours-guard --commit-message="Gitee自动部署: ${GITEE_COMMIT_SHA:0:7}"
