--- a/.gitee/go.yml
+++ b/.gitee/go.yml
@@ -1,32 +1,34 @@
-name: 部署到Cloudflare Pages
-
+name: deploy-to-cloudflare
 on:
   push:
     branches: [ main ]
 
-display-name: "自动部署"
+display-name: "部署到Cloudflare Pages"
 
 stages:
-  - name: 部署
+  - name: build-and-deploy
+    display-name: "构建并部署"
+    fail-fast: true
+    
     steps:
-    - name: 检出代码
+    - name: checkout
       uses: git-checkout
       
-    - name: 安装Node.js
+    - name: setup-node
       uses: node-setup
       with:
-        version: '18'
+        version: 18
         
-    - name: 安装依赖
+    - name: install-dependencies
       run: npm install
       
-    - name: 安装Wrangler
+    - name: install-wrangler
       run: npm install -g wrangler
       
-    - name: 部署
+    - name: deploy
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       run: |
-        echo "开始部署..."
+        echo "开始部署到Cloudflare Pages..."
         wrangler pages deploy public --project-name=hours-guard --commit-message="Auto deploy"
