--- a/.gitee/go.yml
+++ b/.gitee/go.yml
@@ -1,44 +1,69 @@
-name: deploy-to-cloudflare
+name: hours-guard-deploy
 
 on:
   push:
-    branches: 
+    branches:
       - main
-      - master
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    name: "部署到Cloudflare Pages"
-    
     steps:
-      - name: "检出代码"
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
         
-      - name: "设置Node.js"
-        uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v2
         with:
           node-version: '18'
-          cache: 'npm'
           
-      - name: "安装依赖"
+      - name: Prepare Files
         run: |
-          npm ci
-          npm install -g wrangler
-          
-      - name: "验证public目录"
-        run: |
+          echo "检查项目结构..."
+          ls -la
           if [ ! -d "public" ]; then
             echo "创建public目录..."
             mkdir -p public
-            echo "<!DOCTYPE html><html><head><title>Hours Guard</title></head><body><h1>Hours Guard - 工时记录系统</h1><p>部署成功！</p></body></html>" > public/index.html
+            cat > public/index.html << 'EOF'
+          <!DOCTYPE html>
+          <html lang="zh-CN">
+          <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+              <title>Hours Guard - 工时记录系统</title>
+              <style>
+                  body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; margin: 0; padding: 20px; background: #f5f5f5; }
+                  .container { max-width: 600px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+                  h1 { color: #333; text-align: center; margin-bottom: 20px; }
+                  p { color: #666; text-align: center; line-height: 1.6; }
+                  .status { background: #e8f5e8; color: #2d5a2d; padding: 10px; border-radius: 4px; text-align: center; margin: 20px 0; }
+              </style>
+          </head>
+          <body>
+              <div class="container">
+                  <h1>🕐 Hours Guard</h1>
+                  <h2>工时记录系统</h2>
+                  <div class="status">✅ 部署成功！</div>
+                  <p>隐私优先的工时记录工具</p>
+                  <p>纯本地存储，保护您的隐私</p>
+                  <p><small>部署时间: $(date)</small></p>
+              </div>
+          </body>
+          </html>
+          EOF
           fi
+          echo "public目录内容:"
           ls -la public/
           
-      - name: "部署到Cloudflare Pages"
+      - name: Install Wrangler
+        run: |
+          npm install -g wrangler
+          wrangler --version
+          
+      - name: Deploy to Cloudflare
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
           echo "开始部署到Cloudflare Pages..."
-          wrangler pages deploy public --project-name=hours-guard --commit-message="Gitee Go自动部署 - $(date)"
+          wrangler pages deploy public --project-name=hours-guard --commit-message="Gitee Go部署 $(date +%Y%m%d_%H%M%S)"
