重构: 优化目录结构，移除public文件夹层级
 主要改动:
- 将public/下所有文件移动到根目录，简化目录结构
- 删除冗余的JS文件(app-complete.js, app.js, export.js, notification.js, storage.js)
- 重命名核心文件: app-simple.js -> app.js, storage-manager.js -> storage.js, error-handler.js -> error.js
- 更新wrangler.toml部署配置指向根目录
- 更新package.json中的开发和部署脚本
- 修正index.html中的文件引用路径

 优化效果:
- 减少目录嵌套层级，提高可维护性
- 清理代码冗余，避免文件混淆
- 统一命名规范，符合项目惯例
- 保持功能完整性，所有特性正常工作

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Hours Guard (工时卫士) - 隐私优先的工时记录工具 Web版",
   "main": "public/index.html",
   "scripts": {
-    "dev": "python -m http.server 8000 --directory public",
-    "deploy": "wrangler pages deploy public --project-name hours-guard"
+    "dev": "python -m http.server 8000",
+    "deploy": "wrangler pages deploy . --project-name hours-guard"
   },
   "keywords": [
     "time-tracking",
